# rubik-cube-solver

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  run.sh
Models/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitBoard.cpp
PatternDatabase/: CornerDBMaker.h  CornerPatternDatabase.cpp  PatternDatabase.cpp  PatternDatabase.h
Solvers/: BFSSolver.h  DFSSolver.h  IDAStarSolver.h  IDDFSSolver.h
Utils/: NibbleArray.cpp  NibbleArray.h  PermutationIndexer.h
